# gpm

./: CHANGELOG.md  Cargo.toml  README.md
.github/workflows/: release.yml
docs/: commands.md  repo.md  script.md  type.md
src/: config.rs  escape_win.rs  main.rs  main_config.rs  namespace.rs  namespace_config.rs  package_config.rs  repository.rs  repository_config.rs  type_config.rs
src/config/: escape_win.rs  main.rs  repository.rs  type.rs  util.rs
