[package]
name = "gpm"
version = "0.6.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.86"
clap = { version = "4.5.9", features = ["derive", "color"] }
clap_complete = "4.5.8"
colored = "2.1.0"
dirs = "5.0.1"
once_cell = "1.19.0"
path-clean = "1.0.1"
serde = { version = "1.0.204", features = ["derive"] }
tabwriter = { version = "1.4.0", features = ["ansi_formatting"] }
toml = "0.8.14"
