[package]
name = "gpm"
version = "0.6.1"
authors = ["8LWXpg"]
description = "A fully customizable general purpose package manager "
license = "MIT"
repository = "https://github.com/8LWXpg/gpm"
readme = "README.md"
edition = "2024"
rust-version = "1.88.0"

[package.metadata.binstall]
pkg-url = "{ repo }/releases/download/v{ version }/{ name }-{ target }{ archive-suffix }"
bin-dir = "{ name }-{ target }/{ bin }{ binary-ext }"
pkg-fmt = "zip"
disabled-strategies = ["quick-install", "compile"]

[profile.release]
codegen-units = 1
lto = true
opt-level = "s"
panic = "abort"

[dependencies]
anyhow = "1.0.98"
clap = { version = "4.5.37", features = ["derive", "color"] }
clap_complete = "4.5.50"
colored = "3.0.0"
dirs = "6.0.0"
path-clean = "1.0.1"
serde = { version = "1.0.219", features = ["derive"] }
tabwriter = { version = "1.4.1", features = ["ansi_formatting"] }
toml = "0.8.22"
